# sni-tester-pro

./: .gitignore  LICENSE  README.md  apoie.html  index.html
android/code/: MainActivity.kt  TestService.kt
desktop/src/: app.js  index.html  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: extractor.rs  lib.rs  main.rs  scanner.rs
