[package]
name = "sni-tester-pro"
version = "4.0.4"
description = "SNI Tester PRO — Desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sni_tester_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + concorrência (coroutines → tokio)
tokio = { version = "1", features = ["full"] }

# TLS com SNI via TLS nativo do SO (SChannel/Secure Transport/OpenSSL)
native-tls = "0.2"
tokio-native-tls = "0.3"
x509-parser = "0.16"   # issuer do certificado (Fase A do Deep Scan)

# Extrator de arquivos
regex = "1"
flate2 = "1"                                    # streams FlateDecode de PDF
zip = { version = "2", default-features = false, features = ["deflate"] }  # DOCX/XLSX

# Utilidades
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Executável otimizado para tamanho mínimo
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
debug = false
